--- a/TSAR/Views/Newsletter/Create.cshtml
+++ b/TSAR/Views/Newsletter/Create.cshtml
@@ -18,21 +18,22 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            <div  class="col-md-6">
+              
+                @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-11" align="center">
                 <input type="submit" value="Subscribe" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-<div>
+<div class="col-md-11" align="center">
     @Html.ActionLink("If you have an active subscription click here.","Index")
 </div>
 
