--- a/TSAR/Views/Clients/Create.cshtml
+++ b/TSAR/Views/Clients/Create.cshtml
@@ -99,8 +99,15 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <div class="col-md-offset-2 col-md-10">
+        <a id="button" href="@Url.Action("Index")" class="btn btn-default">Back To List</a>
+    </div>
 </div>
+    @*<div class="col-md-offset-2 col-md-10">
+        @Html.ActionLink("Back to List", "Index")
+       
+    </div>*@
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
