--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -22,6 +22,9 @@
     <li class="h2">
         @Html.ActionLink("Send Newsletter", "Index", "SendMailer")
     </li>
+    <li class="h2">
+        @Html.ActionLink("Commssion", "Index", "Commissions")
+    </li>
 
 </ul>
 
