--- a/TSAR/Views/Shared/_Layout.cshtml
+++ b/TSAR/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
+@model TSAR.Models.EmailFormModel
 @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "" }))
 {
     @Html.AntiForgeryToken()
@@ -62,7 +63,8 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        @*<a class="page-scroll" href="#contact">Contact</a>*@
+                        @Html.ActionLink("Contact Us", "Contact", "Home")
                     </li>
                     <li>
                         @Html.ActionLink("Subscribe", "Create", "Newsletter")
@@ -108,10 +110,11 @@
     <section>
         @RenderBody()
     </section>
-
     <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
+<section id="contact">      
+ @*@RenderPage("~/Views/Home/Contact.cshtml", new { EmailFormModel = Model })*@
+
+    @*<div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
@@ -151,8 +154,8 @@
                     </form>
                 </div>
             </div>
-        </div>
-    </section>
+        </div>*@
+</section>
     <footer>
         <div class="container">
             <div class="row">
