--- a/TSAR/Views/Shared/_LayoutOther.cshtml
+++ b/TSAR/Views/Shared/_LayoutOther.cshtml
@@ -115,7 +115,7 @@
 
     <!-- Contact Section -->
     <section id="contact">
-        <div class="container">
+        @*<div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
@@ -155,7 +155,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </div>*@
     </section>
     <footer>
         <div class="container">
