--- a/TSAR/Views/Commissions/Index.cshtml
+++ b/TSAR/Views/Commissions/Index.cshtml
@@ -13,20 +13,26 @@
 <table class="table">
     <tr>
         <th>
+            <font color="white"> @Html.DisplayNameFor(model => model.CommissionId)</font>
+        </th>
+        <th>
             <font color="white"> @Html.DisplayNameFor(model => model.CommissionName)</font>
-</th>
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            <font color="gold"> @Html.DisplayFor(modelItem => item.CommissionName)</font>
-</td>
+            <font color="gold"> @Html.DisplayFor(modelItem => item.CommissionId)</font>
+        </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CommissionId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CommissionId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CommissionId })
+            <font color="gold"> @Html.DisplayFor(modelItem => item.CommissionName)</font>
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new {id = item.CommissionId}) |
+            @Html.ActionLink("Details", "Details", new {id = item.CommissionId}) |
+            @Html.ActionLink("Delete", "Delete", new {id = item.CommissionId})
         </td>
     </tr>
 }
