--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -25,6 +25,9 @@
     <li class="h2">
         @Html.ActionLink("Commssion", "Index", "Commissions")
     </li>
+    <li class="h2">
+        @Html.ActionLink("Administer Roles", "Index", "Role")
+    </li>
 
 </ul>
 
