--- a/TSAR/Views/Clients/Details.cshtml
+++ b/TSAR/Views/Clients/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TSAR.Models.Client
+﻿@model TSAR.ViewModels.TravelViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -71,7 +71,13 @@
             @Html.DisplayFor(model => model.ProjectLeader)
         </dd>
 
-      
+        <dt>
+            @Html.DisplayNameFor(model => model.Rate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Rate)
+        </dd>
 
     </dl>
 </div>
