--- a/TSAR/Views/ManageTravel/Details.cshtml
+++ b/TSAR/Views/ManageTravel/Details.cshtml
@@ -12,19 +12,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.rate)
+            @Html.DisplayNameFor(model => model.Rate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.rate)
+            @Html.DisplayFor(model => model.Rate)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.distance)
+            @Html.DisplayNameFor(model => model.Distance)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.distance)
+            @Html.DisplayFor(model => model.Distance)
         </dd>
 
         <dt>
