--- a/TSAR/Views/Clients/Index.cshtml
+++ b/TSAR/Views/Clients/Index.cshtml
@@ -4,7 +4,21 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
-
+<head>
+    <!--Start of Zendesk Chat Script-->
+    <script type="text/javascript">
+        window.$zopim || (function (d, s) {
+            var z = $zopim = function (c) { z._.push(c) }, $ = z.s =
+            d.createElement(s), e = d.getElementsByTagName(s)[0]; z.set = function (o) {
+                z.set.
+                _.push(o)
+            }; z._ = []; z.set._ = []; $.async = !0; $.setAttribute("charset", "utf-8");
+            $.src = "https://v2.zopim.com/?4kX9439Xlk3AULQwEJ7mX7AUIsQVuohw"; z.t = +new Date; $.
+            type = "text/javascript"; e.parentNode.insertBefore($, e)
+        })(document, "script");
+    </script>
+    <!--End of Zendesk Chat Script-->
+</head>
 <h2>Index</h2>
 <p>
     @using (Html.BeginForm("Index", "Client", FormMethod.Get))
