Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit d364e26857d848f0249b32a605dcea1253f8f980, reversing
changes made to 8bf5642ae6ad711bd3ecb95945b2e02a7839b280.

--- a/TSAR/Views/Clients/Delete.cshtml
+++ b/TSAR/Views/Clients/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TSAR.ViewModels.TravelViewModel
+﻿@model TSAR.Models.Client
 
 @{
     ViewBag.Title = "Delete";
@@ -69,12 +69,8 @@
         <dd>
             @Html.DisplayFor(model => model.ProjectLeader)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Rate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Rate)
-        </dd>
+
+       
 
     </dl>
 
