--- a/TSAR/Views/Clients/Details.cshtml
+++ b/TSAR/Views/Clients/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TSAR.ViewModels.TravelViewModel
+﻿@model TSAR.Models.Client
 
 @{
     ViewBag.Title = "Details";
@@ -71,13 +71,7 @@
             @Html.DisplayFor(model => model.ProjectLeader)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Rate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Rate)
-        </dd>
+      
 
     </dl>
 </div>
