--- a/TSAR/Views/ManageTravel/Delete.cshtml
+++ b/TSAR/Views/ManageTravel/Delete.cshtml
@@ -13,19 +13,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Rate)
+            @Html.DisplayNameFor(model => model.rate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Rate)
+            @Html.DisplayFor(model => model.rate)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Distance)
+            @Html.DisplayNameFor(model => model.distance)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Distance)
+            @Html.DisplayFor(model => model.distance)
         </dd>
 
         <dt>
