--- a/TSAR/Views/ManageTravel/Index.cshtml
+++ b/TSAR/Views/ManageTravel/Index.cshtml
@@ -19,13 +19,13 @@
     <tr>
         
         <th>
-            <font color="white">    @Html.DisplayNameFor(model => model.TravelCode)</font>
+            <font color="white"    @Html.DisplayNameFor(model => model.TravelCode)</font>
         </th>
         <th>
-            <font color="white"> @Html.DisplayNameFor(model => model.Rate)</font>
+            <font color="white"> @Html.DisplayNameFor(model => model.rate)</font>
         </th>
         <th>
-            <font color="white"> @Html.DisplayNameFor(model => model.Distance)</font>
+            <font color="white"> @Html.DisplayNameFor(model => model.distance)</font>
         </th>
         <th>
             <font color="white">@Html.DisplayNameFor(model => model.TravelFee)</font>
@@ -39,10 +39,10 @@
             <font color="gold" style = "text-transform:uppercase;">       @Html.DisplayFor(modelItem => item.TravelCode)</font>
         </td>
         <td>
-            <font color="gold"> @Html.DisplayFor(modelItem => item.Rate)</font>
+            <font color="gold"> @Html.DisplayFor(modelItem => item.rate)</font>
         </td>
         <td>
-            <font color="gold"> @Html.DisplayFor(modelItem => item.Distance)</font>
+            <font color="gold"> @Html.DisplayFor(modelItem => item.distance)</font>
         </td>
         <td>
             <font color="gold"> @Html.DisplayFor(modelItem => item.TravelFee)</font>
