Calculate distance-Paired programming with Alyesha Ramjith and Create Budget

--- a/TSAR/Views/Clients/Delete.cshtml
+++ b/TSAR/Views/Clients/Delete.cshtml
@@ -60,7 +60,7 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
 
-       
+
 
         <dt>
             @Html.DisplayNameFor(model => model.ProjectLeader)
@@ -69,12 +69,12 @@
         <dd>
             @Html.DisplayFor(model => model.ProjectLeader)
         </dd>
-
        
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
