--- a/TSAR/Views/Budget/Delete.cshtml
+++ b/TSAR/Views/Budget/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TSAR.Models.ManageTravel
+﻿@model TSAR.Models.Budget
 
 @{
     ViewBag.Title = "Delete";
@@ -9,31 +9,23 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ManageTravel</h4>
+    <h4>Budget</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Rate)
+            @Html.DisplayNameFor(model => model.Client.ClientName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Rate)
+            @Html.DisplayFor(model => model.Client.ClientName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Distance)
+            @Html.DisplayNameFor(model => model.Balance)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Distance)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TravelFee)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TravelFee)
+            @Html.DisplayFor(model => model.Balance)
         </dd>
 
     </dl>
