--- a/TSAR/Views/Clients/Create.cshtml
+++ b/TSAR/Views/Clients/Create.cshtml
@@ -25,15 +25,6 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.Branch, htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.Branch, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Branch, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             <div align="center">
@@ -140,7 +131,7 @@
                     <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
                 </div>
                 <div>
-                    <input id="travelfrom" type="text" name="name" value="15 Zenith Dr, Umhlanga Ridge, Umhlanga, KZN, 4319" style="display: none;" />
+                    <input id="travelfrom" type="text" name="name" value="10 Nollsworth Crescent, Umhlanga, South Africa" style="display: none;" />
 
 
 
