--- a/TSAR/Views/Clients/Index.cshtml
+++ b/TSAR/Views/Clients/Index.cshtml
@@ -16,29 +16,33 @@
 </p>
 <table class="table">
     <tr>
+      
 
         <th>
-            <font color="white">   @Html.DisplayNameFor(model => model.ClientName)</font>
+            <font color="white"> @Html.DisplayNameFor(model => model.ClientName)</font>
+        </th>
+        
+        <th>
+            <font color="white"> @Html.DisplayNameFor(model => model.ClientAddress)</font>
         </th>
         <th>
-            <font color="white">    @Html.DisplayNameFor(model => model.Branch)</font>
+            <font color="white"> @Html.DisplayNameFor(model => model.ContactNumber)</font>
         </th>
         <th>
-            <font color="white">     @Html.DisplayNameFor(model => model.ClientAddress)</font>
-        </th>
-        <th>
-            <font color="white">   @Html.DisplayNameFor(model => model.ContactNumber)</font>
-        </th>
-        <th>
-            <font color="white">    @Html.DisplayNameFor(model => model.Email)</font>
-        </th>
-
-        <th>
-            <font color="white">  @Html.DisplayNameFor(model => model.ManageTravel.TravelCode)</font>
+            <font color="white"> @Html.DisplayNameFor(model => model.Email)</font>
         </th>
 
         <th>
-            <font color="white">  @Html.DisplayNameFor(model => model.ProjectLeader)</font>
+            <font color="white"> @Html.DisplayNameFor(model => model.ManageTravel.Rate)</font>
+        </th>
+        <th>
+            <font color="white"> @Html.DisplayNameFor(model => model.ManageTravel.Distance)</font>
+        </th>
+        <th>
+            <font color="white"> @Html.DisplayNameFor(model => model.ManageTravel.TravelCode)</font>
+        </th>
+        <th>
+            <font color="white"> @Html.DisplayNameFor(model => model.ProjectLeader)</font>
         </th>
 
 
@@ -54,9 +58,6 @@
                 <font color="gold">  @Html.DisplayFor(modelItem => item.ClientName)</font>
             </td>
             <td>
-                <font color="gold">   @Html.DisplayFor(modelItem => item.Branch)</font>
-            </td>
-            <td>
                 <font color="gold">   @Html.DisplayFor(modelItem => item.ClientAddress)</font>
             </td>
             <td>
@@ -65,7 +66,14 @@
             <td>
                 <font color="gold">   @Html.DisplayFor(modelItem => item.Email)</font>
             </td>
+            <td>
+                <font color="gold" style="text-transform:uppercase;"> @Html.DisplayFor(modelItem => item.ManageTravel.Rate)</font>
 
+            </td>
+            <td>
+                <font color="gold" style="text-transform:uppercase;"> @Html.DisplayFor(modelItem => item.ManageTravel.Distance)</font>
+
+            </td>
 
             <td>
                 <font color="gold" style="text-transform:uppercase;"> @Html.DisplayFor(modelItem => item.ManageTravel.TravelCode)</font>
