--- a/TSAR/css/agency.css
+++ b/TSAR/css/agency.css
@@ -226,7 +226,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/Elephant3.jpg');
+  background-image: url('../img/comp1.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
