Added IM Chat + Dashboard

--- a/TSAR/Views/Clients/Index.cshtml
+++ b/TSAR/Views/Clients/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Index</h2>
 <p>
-    @using (Html.BeginForm("Index", "Client", FormMethod.Get))
+    @using (Html.BeginForm("Index", "Clients", FormMethod.Get))
     {
         <b>Search by:</b><font color="Black"> @Html.TextBox("Search")<input type="submit" value="Search" style="color: black" /></font>}
 </p>
