--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -28,6 +28,9 @@
     <li class="h2">
         @Html.ActionLink("Administer Roles", "Index", "Role")
     </li>
+    <li class="h2">
+        @Html.ActionLink("Instant Message DashBoard", "Dashboard", "Dashboard")
+    </li>
 
 </ul>
 
