--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -26,10 +26,13 @@
         @Html.ActionLink("Commssion", "Index", "Commissions")
     </li>
     <li class="h2">
-        @Html.ActionLink("Administer Roles", "Index", "Role")
+        @Html.ActionLink("Administer Roles", "Index", "Roles")
     </li>
     <li class="h2">
         @Html.ActionLink("Instant Message DashBoard", "Dashboard", "Dashboard")
+    </li>
+    <li class="h2">
+        @Html.ActionLink("Document Warehouse", "Index", "Files")
     </li>
 
 </ul>
