--- a/TSAR/Views/Roles/Edit.cshtml
+++ b/TSAR/Views/Roles/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
-    
-
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h1 style="color:yellow">Edit Role</h1>
+<h2>Edit Role</h2>
 
 @Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
 <hr />
@@ -15,12 +13,11 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     @Html.HiddenFor(model => model.Id)
-    <div style="color: yellow">
+    <div>
         Role name
     </div>
     <p>
         @Html.TextBoxFor(model => model.Name)
     </p>
-    <input type="submit" value="Save"/>
+    <input type="submit" value="Save" />
 }
-
