--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -34,6 +34,12 @@
     <li class="h2">
         @Html.ActionLink("Document Warehouse", "Index", "Files")
     </li>
+    <li class="h2">
+        @Html.ActionLink("Tickets", "Index", "Tickets")
+    </li>
+    <li class="h2">
+        @Html.ActionLink("Timesheets", "Index", "Timesheets")
+    </li>
 
 </ul>
 
