Added Leave. Added in manager and consultant menu

--- a/TSAR/Views/Manage/ConsultantMenu.cshtml
+++ b/TSAR/Views/Manage/ConsultantMenu.cshtml
@@ -6,3 +6,9 @@
 
 <h2>Consultant Menu</h2>
 
+<ul class ="table">
+    <li class="h2">
+        @Html.ActionLink("Leave", "Index", "Leaves")
+    </li>
+</ul>
+
