--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -40,6 +40,9 @@
     <li class="h2">
         @Html.ActionLink("Timesheets", "Index", "Timesheets")
     </li>
+    <li class="h2">
+        @Html.ActionLink("Manage Leave", "Index", "Leaves")
+    </li>
 
 </ul>
 
