--- a/TSAR/Views/Roles/Create.cshtml
+++ b/TSAR/Views/Roles/Create.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Create Role</h2>
-@Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
+@*@Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")*@
 <hr />
 @using (Html.BeginForm())
 {
