--- a/TSAR/Views/Roles/Edit.cshtml
+++ b/TSAR/Views/Roles/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Edit Role</h2>
 
-@Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
+@*@Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")*@
 <hr />
 @using (Html.BeginForm())
 {
